--- a/BlinkID/tsconfig.json
+++ b/BlinkID/tsconfig.json
@@ -3,6 +3,7 @@
     "allowUnreachableCode": false,
     "declaration": true,
     "esModuleInterop": true,
+    "strictNullChecks": false,
     "lib": [
       "dom",
       "es2015"
@@ -10,7 +11,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "outDir": "dist/esm",
     "pretty": true,
