--- a/BlinkID/android/build.gradle
+++ b/BlinkID/android/build.gradle
@@ -1,9 +1,3 @@
-ext {
-    junitVersion =  project.hasProperty('junitVersion') ? rootProject.ext.junitVersion : '4.12'
-    androidxJunitVersion =  project.hasProperty('androidxJunitVersion') ? rootProject.ext.androidxJunitVersion : '1.1.1'
-    androidxEspressoCoreVersion =  project.hasProperty('androidxEspressoCoreVersion') ? rootProject.ext.androidxEspressoCoreVersion : '3.2.0'
-}
-
 buildscript {
     repositories {
         google()
@@ -23,7 +17,6 @@ android {
         targetSdkVersion project.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -36,17 +29,21 @@ android {
     }
 }
 
-repositories {
-    google()
-    jcenter()
-    mavenCentral()
+rootProject.allprojects {
+    repositories {
+        maven { url 'http://maven.microblink.com' }
+        google()
+        jcenter()
+        mavenCentral()
+    }
 }
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
-    testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+
+    implementation('com.microblink:blinkid:5.7.0@aar') {
+        transitive = true
+    }
 }
