[iOS] update for 5.12.0

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ xcshareddata
 #Demo App
 /Sample
 
+#NPM
+node_modules/
 
 # Created by https://www.toptal.com/developers/gitignore/api/androidstudio
 # Edit at https://www.toptal.com/developers/gitignore?templates=androidstudio
