--- a/BlinkID/android/src/main/AndroidManifest.xml
+++ b/BlinkID/android/src/main/AndroidManifest.xml
@@ -1,5 +1,11 @@
 
   <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.microblink.blinkid.capacitor.blinkidcapacitor">
+
+      <application>
+    <activity android:name="com.microblink.activity.DocumentScanActivity" android:noHistory="true" />
+    <activity android:name="com.microblink.activity.DocumentVerificationActivity" android:noHistory="true" />
+    <activity android:name="com.microblink.activity.BlinkIdActivity" android:noHistory="true" />
+</application>
   </manifest>
   
