--- a/BlinkID/package.json
+++ b/BlinkID/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microblink/blinkid-capacitor",
-  "version": "5.17.0",
+  "version": "6.4.0",
   "description": "A small and powerful ID card Capacitor plugin for BlinkID SDK",
   "main": "dist/plugin.js",
   "module": "dist/esm/index.js",
@@ -20,12 +20,14 @@
     "access": "public"
   },
   "devDependencies": {
-    "@capacitor/android": "^3.2.0",
-    "@capacitor/core": "^3.2.0",
-    "@capacitor/ios": "^3.2.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/cli": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
     "@ionic/prettier-config": "^1.0.0",
     "@ionic/swiftlint-config": "^1.0.0",
     "@rollup/plugin-node-resolve": "^8.1.0",
+    "@types/node": "^17.0.41",
     "prettier": "^2.0.5",
     "prettier-plugin-java": "^1.3.0",
     "rimraf": "^3.0.0",
@@ -41,7 +43,7 @@
     "MicroblinkBlinkidCapacitor.podspec"
   ],
   "peerDependencies": {
-    "@capacitor/core": "^3.2.0"
+    "@capacitor/core": "^5.0.0"
   },
   "keywords": [
     "capacitor",
